# spacelink

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .taskmasterconfig  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  PRD.md  README.md  codex.md  conversions.py  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_conversions.py
.cursor/rules/: architecture.mdc  guardrails.mdc  python.mdc  rf.mdc  unit_tests.mdc  units.mdc
.doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree
.doctrees/core/: antenna.doctree  index.doctree  noise.doctree  path.doctree  pattern_io.doctree  ranging.doctree  units.doctree
.doctrees/phy/: index.doctree  mode.doctree  performance.doctree  registry.doctree
.github/workflows/: docs-build.yml  docs-deploy.yml  docs.yml  documentation.yml  publish-pypi.yml  publish-testpypi.yml  python-tests.yml
.roo/rules/: code_modification.md  development.md  documentation.md  link_budget.md  math_calculations.md  rf.md  units.md
_modules/: index.html
_modules/spacelink/core/: antenna.html  noise.html  path.html  pattern_io.html  ranging.html  units.html
_modules/spacelink/phy/: mode.html  performance.html  registry.html
_sources/: examples.rst.txt  index.rst.txt
_sources/core/: index.rst.txt  path.rst.txt  pattern_io.rst.txt  ranging.rst.txt
_sources/phy/: index.rst.txt  mode.rst.txt  performance.rst.txt
core/: antenna.html  index.html  noise.html  path.html  pattern_io.html  ranging.html  units.html
docs/source/: antenna.rst  cascade.rst  conf.py  conversions.rst  dish.rst  examples.rst  index.rst  link.rst  math_examples.rst  mode.rst  modules.rst  noise.rst  path.rst  units.rst
docs/source/_ext/: human_verified.py
docs/source/_static/: custom.css
docs/source/components/: antenna.rst  demodulator.rst  index.rst  mode.rst  receiver.rst  signal.rst  sink.rst  source.rst  stage.rst  transmitter.rst
docs/source/core/: antenna.rst  cassegrain.rst  channelcoding.rst  index.rst  modcod.rst  noise.rst  path.rst  pattern_io.rst  ranging.rst  units.rst  validation.rst
docs/source/phy/: mode.rst  registry.rst
docs/source/serialization/: index.rst  quantity.rst
examples/: antenna_example.ipynb  leo_link_budget_example.ipynb  leo_satellite.ipynb
notebooks/examples/: cassegrain_design.ipynb  leo_link_budget.ipynb  modulation_and_coding.ipynb
notebooks/theory/: antenna.ipynb  coding.ipynb  link.ipynb  modcod.ipynb  noise.ipynb  path.ipynb  ranging.ipynb  suggested_core_init_update.txt  units.ipynb
phy/: index.html  mode.html  performance.html  registry.html
src/pyradio/: __init__.py  antenna.py  cascade.py  conversions.py  dish.py  link.py  mode.py  noise.py  path.py  units.py
src/spacelink/: __init__.py  antenna.py  cascade.py  demodulator.py  link.py  mode.py  noise.py  path.py  receiver.py  signal.py  sink.py  source.py  stage.py  transmitter.py  units.py  validation.py
src/spacelink/components/: README.md  __init__.py  antenna.py  demodulator.py  mode.py  receiver.py  signal.py  sink.py  source.py  stage.py  transmitter.py
src/spacelink/core/: README.md  __init__.py  antenna.py  cassegrain.py  channelcoding.py  modcod.py  noise.py  path.py  pattern_io.py  ranging.py  units.py  validation.py
src/spacelink/phy/: mode.py  performance.py  registry.py
src/spacelink/phy/data/modes/: ccsds_tm_modes.yaml  dvbs2_modes.yaml  generic_modes.yaml
src/spacelink/phy/data/perf/: CCSDS_TM_TURBO1784-12_BPSK.ber.yaml  (+56 more)
src/spacelink/serialization/: __init__.py  quantity.py
tests/: conftest.py  test_antenna.py  test_cascade.py  test_conversions.py  test_demodulator.py  test_dish.py  test_link.py  test_mode.py  test_noise.py  test_notebooks_execution.py  test_path.py  test_receiver.py  test_reference_cases.py  test_signal.py  test_sink.py  test_source.py  test_stage.py  test_transmitter.py  test_units.py
tests/components/: test_antenna.py  test_demodulator.py  test_mode.py  test_receiver.py  test_signal.py  test_sink.py  test_source.py  test_stage.py  test_transmitter.py
tests/core/: test_antenna.py  test_cassegrain.py  test_channelcoding.py  test_modcod.py  test_noise.py  test_path.py  test_pattern_io.py  test_ranging.py  test_units.py
tests/notebooks/: test_notebooks_execution.py
tests/phy/: test_mode.py  test_performance.py  test_registry.py  test_registry_data.py
tests/serialization/: test_quantity.py
tests/test_cases/: __init__.py  cascade_multi.yaml  cascade_simple.yaml  cascade_vswr.yaml  deep_space.yaml  leo_downlink.yaml  leo_uplink.yaml  lunar_downlink.yaml  lunar_uplink.yaml  receive_front_end.yaml
