[tool.poetry]
name = "spacelink"
version = "0.1.3"
description = "Space link budget calculation package"
authors = [
    "Jacob Portukalian <jacob@cascade.space>",
    "Arlen Abraham <arlen@cascade.space>",
    "Brett Gottula <brett@cascade.space>",
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cascade-space-co/spacelink"
repository = "https://github.com/cascade-space-co/spacelink"
documentation = "https://cascade-space-co.github.io/spacelink"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{include = "spacelink", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0,<3.0.0"
scipy = "^1.10.0,<2.0.0"
astropy = "^7.0.1,<8.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
renku-sphinx-theme = "^0.5.0"
sphinx-autodoc-typehints = "^1.25.2"
wheel = "^0.45.1"
twine = "^6.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.2"
black = "^25.1.0"
flake8 = "^7.0.0"

[tool.poetry.group.demo.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 90
